fix: grid-template-row spacing

--- a/backend/api/static/styles.css
+++ b/backend/api/static/styles.css
@@ -86,7 +86,7 @@
 }
 
 .wiw-person-attrs-col-2 {
-  grid-column: 2 / 4;
+  grid-column: 2 / 3;
 }
 
 .wiw-person-attr {
